--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "valid-url": "^1.0.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "jest",
